@@ -7451,6 +7451,11 @@ foreach {n msg expected} {
     } [lrange $expected 0 end]
 }
 
+test chan-io-73.1 {channel Tcl_Obj SetChannelFromAny} {} {
+    # Test for Bug 1847044 - don't spoil type unless we have a valid channel
+    catch {chan close [lreplace [list a] 0 end]}
+} {1}
+
 # ### ### ### ######### ######### #########
 
 # cleanup
